--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,13 +1,9 @@
 # =============================================================================
 # CyberGAP Backend - Dockerfile
-# Optimizado para ARM64 (Raspberry Pi 5)
+# Optimizado para ARM64 (Raspberry Pi 5) y AMD64
 # =============================================================================
 
 FROM python:3.11-slim-bookworm
-
-# Argumentos de build
-ARG TARGETPLATFORM
-ARG BUILDPLATFORM
 
 # Metadatos
 LABEL maintainer="CyberGAP"
@@ -28,6 +24,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     gcc \
     libpq-dev \
     libffi-dev \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
 # Copiar requirements primero (para cache de Docker)
@@ -39,20 +36,15 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copiar código de la aplicación
 COPY ./app ./app
 
-# Crear directorio de datos
-RUN mkdir -p /app/data
-
-# Crear usuario no-root
-RUN useradd -m -u 1000 cybergap && \
-    chown -R cybergap:cybergap /app
-USER cybergap
+# Crear directorio de datos y logs con permisos correctos
+RUN mkdir -p /app/data /app/logs && chmod 777 /app/data /app/logs
 
 # Puerto
 EXPOSE 8000
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD python -c "import urllib.request; urllib.request.urlopen('http://localhost:8000/api/health')" || exit 1
+# Health check con más tiempo de inicio
+HEALTHCHECK --interval=30s --timeout=10s --start-period=30s --retries=5 \
+    CMD curl -f http://localhost:8000/api/health || exit 1
 
 # Comando por defecto
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
