Adicion de debug

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -35,6 +35,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Copiar código de la aplicación
 COPY ./app ./app
+COPY ./start.sh ./start.sh
+RUN chmod +x ./start.sh
 
 # Crear directorio de datos y logs con permisos correctos
 RUN mkdir -p /app/data /app/logs && chmod 777 /app/data /app/logs
@@ -42,9 +44,5 @@ RUN mkdir -p /app/data /app/logs && chmod 777 /app/data /app/logs
 # Puerto
 EXPOSE 8000
 
-# Health check con más tiempo de inicio
-HEALTHCHECK --interval=30s --timeout=10s --start-period=30s --retries=5 \
-    CMD curl -f http://localhost:8000/api/health || exit 1
-
-# Comando por defecto
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Comando por defecto con script de inicio
+CMD ["./start.sh"]
