--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       - DEFAULT_ADMIN_PASSWORD=${DEFAULT_ADMIN_PASSWORD:-admin123}
       - CORS_ORIGIN=${BASE_URL:-http://localhost}
       - BASE_URL=${BASE_URL:-http://localhost}
-      - DEBUG=true
+      - DEBUG=${DEBUG:-false}
       - TZ=${TZ:-America/Santiago}
     volumes:
       - cybergap_data:/app/data
@@ -52,14 +52,13 @@ services:
   # Nginx Reverse Proxy
   # =========================================================================
   nginx:
-    image: nginx:alpine
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
     container_name: cybergap-nginx
     restart: unless-stopped
     ports:
       - "${PORT:-80}:80"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/conf.d:/etc/nginx/conf.d:ro
     networks:
       - cybergap-network
     depends_on:
