--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,13 +1,5 @@
-# Upstream definitions
-upstream backend {
-    server backend:8085;
-    keepalive 32;
-}
-
-upstream frontend {
-    server frontend:80;
-    keepalive 32;
-}
+# Resolver para Docker DNS
+resolver 127.0.0.11 valid=10s ipv6=off;
 
 # Main server block
 server {
@@ -20,11 +12,13 @@ server {
     # Security
     server_tokens off;
 
+    # Variables para resolver dinámicamente
+    set $backend_upstream http://backend:8085;
+    set $frontend_upstream http://frontend:80;
+
     # API endpoints - proxy to FastAPI backend
     location /api {
-        limit_req zone=api burst=20 nodelay;
-        
-        proxy_pass http://backend;
+        proxy_pass $backend_upstream;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -36,49 +30,18 @@ server {
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
-
-        # CORS headers (handled by FastAPI but backup)
-        add_header Access-Control-Allow-Origin * always;
-        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-        add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
-        
-        if ($request_method = OPTIONS) {
-            return 204;
-        }
-    }
-
-    # Login rate limiting
-    location /api/auth/login {
-        limit_req zone=login burst=5 nodelay;
-        
-        proxy_pass http://backend;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # Public survey endpoints
-    location /api/public {
-        proxy_pass http://backend;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # Health check endpoint
     location /api/health {
-        proxy_pass http://backend;
+        proxy_pass $backend_upstream;
         proxy_http_version 1.1;
         access_log off;
     }
 
     # Frontend - Vue.js SPA
     location / {
-        proxy_pass http://frontend;
+        proxy_pass $frontend_upstream;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -92,7 +55,7 @@ server {
 
     # Static assets caching
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-        proxy_pass http://frontend;
+        proxy_pass $frontend_upstream;
         proxy_http_version 1.1;
         expires 1y;
         add_header Cache-Control "public, immutable";
@@ -106,23 +69,3 @@ server {
         internal;
     }
 }
-
-# HTTPS server (uncomment and configure SSL certificates)
-# server {
-#     listen 443 ssl http2;
-#     server_name _;
-#
-#     ssl_certificate /etc/nginx/ssl/cert.pem;
-#     ssl_certificate_key /etc/nginx/ssl/key.pem;
-#     ssl_session_timeout 1d;
-#     ssl_session_cache shared:SSL:50m;
-#     ssl_session_tickets off;
-#
-#     ssl_protocols TLSv1.2 TLSv1.3;
-#     ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256;
-#     ssl_prefer_server_ciphers off;
-#
-#     add_header Strict-Transport-Security "max-age=63072000" always;
-#
-#     # Same location blocks as above
-# }
